force-app/main/default/objects/GlobalSetting__c/fields/IgnoreTrigger__c.field-meta.xml
<CustomField>
    <fullName>IgnoreTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>忽略触发器</label>
    <type>Checkbox</type>
</CustomField>