force-app/main/default/objects/GlobalSetting__c/fields/IgnoreValidation__c.field-meta.xml
<CustomField>
    <fullName>IgnoreValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>忽略验证规则</label>
    <type>Checkbox</type>
</CustomField>