force-app/main/default/objects/GlobalSetting__c/fields/IgnoreWorkflow__c.field-meta.xml
<CustomField>
    <fullName>IgnoreWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>忽略工作流/进程生成器</label>
    <type>Checkbox</type>
</CustomField>