force-app/main/default/objects/GlobalSetting__c/fields/Last_Address__c.field-meta.xml
<CustomField>
    <fullName>Last_Address__c</fullName>
    <label>最后一次使用位置</label>
    <length>255</length>
    <type>Text</type>
</CustomField>