force-app/main/default/objects/GlobalSetting__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>IgnoreTrigger__c</columns>
    <columns>IgnoreValidation__c</columns>
    <columns>IgnoreWorkflow__c</columns>
    <columns>Last_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>zh_CN</language>
</ListView>